--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -7,7 +7,7 @@
   <%= f.input :reset_password_token, as: :hidden %>
   <%= f.full_error :reset_password_token %>
 
-  <div class="form-inputs">
+  <div class="form-inputs animate__animated animate__bounceInDown">
     <%= f.input :password,
                 label: "Nouveau mot de passe",
                 required: true,
@@ -20,7 +20,7 @@
                 input_html: { autocomplete: "new-password" } %>
   </div>
 
-  <div class="form-actions btn btn-primary">
+  <div class="form-actions btn btn-primary animate__animated animate__bounceInUp">
     <%= f.button :submit, "Changer mon mot de passe" %>
   </div>
 <% end %>
