--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -4,14 +4,14 @@
   <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
     <%= f.error_notification %>
 
-    <div class="form-inputs">
+    <div class="form-inputs animate__animated animate__bounceInDown">
       <%= f.input :email,
                   required: true,
                   autofocus: true,
                   input_html: { autocomplete: "email" } %>
     </div>
 
-    <div class="form-actions btn btn-primary">
+    <div class="form-actions btn btn-primary animate__animated animate__bounceInUp">
       <%= f.button :submit, "Envoi des intructions de mot de passe" %>
     </div>
   <% end %>
