--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,10 +1,10 @@
 <div class="sign container">
-  <h2>Sign up</h2>
+  <h2>Enregistrez-vous</h2>
 
   <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= f.error_notification %>
 
-    <div class="form-inputs">
+    <div class="form-inputs animate__animated animate__bounceInDown">
       <%= f.input :name,
                   required: true,
                   autofocus: true,
@@ -22,8 +22,8 @@
                   input_html: { autocomplete: "new-password" } %>
     </div>
 
-    <div class="form-actions btn btn-primary">
-      <%= f.button :submit, "Se connecter" %>
+    <div class="form-actions btn btn-primary animate__animated animate__bounceInUp">
+      <%= f.button :submit, "S'enregistrer" %>
     </div>
   <% end %>
 
