--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,13 +1,13 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Se connecter", new_session_path(resource_name), class: "btn btn-second" %><br />
+  <%= link_to "Se connecter", new_session_path(resource_name), class: "btn btn-second animate__animated animate__bounceInUp" %><br />
 <% end %>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "S'enregistrer", new_registration_path(resource_name), class: "btn btn-second"%><br />
+  <%= link_to "S'enregistrer", new_registration_path(resource_name), class: "btn btn-second animate__animated animate__bounceInUp"%><br />
 <% end %>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "mot de passe oublié?", new_password_path(resource_name), class:"form-actions" %><br />
+  <%= link_to "mot de passe oublié?", new_password_path(resource_name), class:"form-actions animate__animated animate__bounceInUp" %><br />
 <% end %>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
