--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,16 +1,16 @@
 <%# warper %>
-<div class="container home">
+<div class="container home" data-controller="home" data-home-target="home">
 
 <%# Logo %>
-<div class="container text-center logo animate__animated animate__bounceInDown">
+<div class="container text-center logo animate__animated animate__bounceInDown" >
   <%= image_tag("logo-smile.png", width: 270, height: 270, :class => "img-fluid mb-1") %>
 </div>
 
 <%# h6 & BUTTONS%>
-<div class="mode-de-jeu container text-center animate__animated animate__bounceInRight">
+<div class="mode-de-jeu container text-center animate__animated animate__bounceInRight " >
   <h4 class="mt-3 mb-4 choix">Choisissez votre mode de jeu</h4>
-  <%= link_to "CHANSON DU JOUR", game_game_sessions_path(:game_id => @solo), method: :post, class: "btn d-block btn-primary btn-lg mb-4" %>
-  <%= link_to "PLAYLIST DU JOUR (x3)", game_game_sessions_path(:game_id => @playlist), method: :post, class: "btn d-block btn-primary btn-lg mb-5" %>
+  <%= link_to "CHANSON DU JOUR", game_game_sessions_path(:game_id => @solo), method: :post, class: "btn d-block btn-primary btn-lg mb-4", data: {action: "click->home#out"}  %>
+  <%= link_to "PLAYLIST DU JOUR (x3)", game_game_sessions_path(:game_id => @playlist), method: :post, class: "btn d-block btn-primary btn-lg mb-5", data: {action: "click->home#out"} %>
 </div>
 
   <%# small button %>
