--- a/app/views/guests/stats.html.erb
+++ b/app/views/guests/stats.html.erb
@@ -40,7 +40,7 @@
 
   <%# Logo %>
   <div class="delete-btn">
-    <%= link_to "Supprimer mes données", reset_guest_path(:guest_id => @current_guest), method: :delete, data: {:confirm => 'Etes vous sur ?'}, class: "btn d-block btn-primary btn-lg mb-4 mt-5" %>
+    <%= link_to "Supprimer mes données", reset_guest_path(:guest_id => @current_guest), method: :delete, data: {:confirm => 'Etes vous sur ?'}, class: "btn d-block btn-primary btn-lg mb-4 mt-5 animate__animated animate__bounceInRight" %>
   </div>
 
 </div>
