--- a/app/views/friendships/index.html.erb
+++ b/app/views/friendships/index.html.erb
@@ -10,11 +10,11 @@
     <p>Ajouter un ami 👇👇 </p>
   <% end  %>
 
-  <div class="mb-5">
+  <div class="w-50 mb-5">
     <%= simple_form_for @friendship, url: friendships_path, method: :post, html: { class: 'form-inline' } do |f| %>
-      <%= hidden_field_tag "friendship[user_id]", current_user.id %>
-      <%= f.input :friend_id, collection: @all_users %>
-      <%= f.submit "Ajouter un ami", class: "btn btn-primary" %>
+      <%# <%= hidden_field_tag "friendship[user_id]", current_user.id %>
+      <%= f.input :friend_id, collection: @all_users, input_html: {multiple: true, data: {controller: 'select2', select2_options_value: {tags: true}}} %>
+      <%= f.submit "Ajouter un ami", class: "btn d-block btn-primary btn-lg w-100" %>
     <% end %>
   </div>
 
