--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -11,8 +11,6 @@
                   input_html: { autocomplete: "email" } %>
     </div>
 
-    <div class="form-actions btn btn-primary animate__animated animate__bounceInUp">
-      <%= f.button :submit, "Envoi des intructions de mot de passe" %>
-    </div>
+    <%= f.button :submit, "Envoi des intructions de mot de passe", class:"form-actions btn btn-primary animate__animated animate__bounceInUp" %>
   <% end %>
 </div>
