--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -20,9 +20,7 @@
                 input_html: { autocomplete: "new-password" } %>
   </div>
 
-  <div class="form-actions btn btn-primary animate__animated animate__bounceInUp">
-    <%= f.button :submit, "Changer mon mot de passe" %>
-  </div>
+    <%= f.button :submit, "Changer mon mot de passe", class:"form-actions btn btn-primary animate__animated animate__bounceInUp" %>
 <% end %>
 
 <%= render "devise/shared/links" %>
