--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -24,9 +24,7 @@
                 input_html: { autocomplete: "current-password" } %>
   </div>
 
-  <div class="form-actions btn btn-primary animate__animated animate__bounceInUp">
-    <%= f.button :submit, "Modifier" %>
-  </div>
+  <%= f.button :submit, "Modifier", class:"form-actions btn btn-primary animate__animated animate__bounceInUp" %>
 <% end %>
 
 <h3>Cancel my account</h3>
