--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -22,10 +22,6 @@
                   input_html: { autocomplete: "new-password" } %>
     </div>
 
-    <div class="form-actions btn btn-primary animate__animated animate__bounceInUp">
-      <%= f.button :submit, "S'enregistrer" %>
-    </div>
+      <%= f.button :submit, "S'enregistrer", class:"form-actions btn btn-primary animate__animated animate__bounceInUp"  %>
   <% end %>
-
-  <%= render "devise/shared/links" %>
 </div>
