--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -31,7 +31,11 @@
       <% end %>
     <%end %>
 
-    <% if guest_present? %>
+     <% if user_signed_in? %>
+      <%= link_to users_stats_path, class: "btn btn-warning" do %>
+        <i class="fas fa-chart-bar fa-1x"></i>
+      <% end %>
+    <% elsif guest_present? %>
       <%= link_to stats_guest_path(current_guest), class: "btn btn-warning" do %>
         <i class="fas fa-chart-bar fa-1x"></i>
       <% end %>
