--- a/app/views/pages/rules.html.erb
+++ b/app/views/pages/rules.html.erb
@@ -35,9 +35,11 @@
   <div class="bubble animate__animated animate__bounceInRight">
     <p> Tu veux jouer avec tes amis ?
     <br>
-        compares les scores en t'enregistrant
+        compares tes scores en t'enregistrant
     <br>
     </p>
-    <button href= ''>ajouter un bouton social</button>
+      <%= link_to new_user_session_path, class: "anmbtn custom shadow edge" do %>
+        <i class="front fas fa-users"></i>
+      <% end %>
   </div>
 </div>
