--- a/app/views/friendships/index.html.erb
+++ b/app/views/friendships/index.html.erb
@@ -1,41 +1,66 @@
 <div class="container-friendship">
 
-  <%= current_user.name %>
-  <h2>Mes Amis</h2>
-
-  <div class="mb-2">leaderbord</div>
-  <% if current_user.allfriends.any?  %>
-    <% current_user.allfriends.each do |friendship| %>
-      <% if friendship.friend.name == current_user.name %>
-      <%= friendship.user.name %>
-      <% else %>
-      <%= friendship.friend.name %>
-      <% end %>
-
-    <% end  %>
-  <% else  %>
-    <p>Ajouter un ami 👇👇 </p>
-
-  <% end  %>
-
-  <div class="w-50 mb-5">
-    <%= simple_form_for @friendship, url: friendships_path, method: :post, html: { class: 'form-inline' } do |f| %>
-
-      <%# <%= hidden_field_tag "friendship[user_id]", current_user.id %>
-      <%= f.input :friend_id, collection: @all_users, input_html: {multiple: true, data: {controller: 'select2', select2_options_value: {tags: true}}} %>
-      <%= f.submit "Ajouter un ami", class: "btn d-block btn-primary btn-lg w-100" %>
-
-    <% end %>
-  <%= link_to destroy_user_session_path, class: 'logout btn btn-warning animate__animated animate__bounceInLeft', method: :delete do %>
-  <i class="fas fa-sign-out-alt"></i>
-  <% end %>
+  <div class="bubble-user-recap w-75 mb-5">
+    <h1>ULTRA GENERIQUE</h1>
   </div>
 
-  <div>Demande d'amis </div>
-<% @pending.each do |demand|%>
-  <%= demand.user.name  %>
-  <%= link_to "✔️", accept_friendship_path(demand), :method => 'patch' %>
-  <%= link_to "❌", cancel_friendship_path(demand), :method => 'patch' %>
-<% end  %>
+  <h2>leaderbord</h2>
+
+  <div class="leaderboard mb-5 mt-2">
+    <div class="user-info">
+      <div class="choix">01</div>
+      <div class="bubble-leaderboard-green d-flex justify-content-around align-items-center ">
+        <%= image_tag("salad-user.png", width: 15, height: 15, :class => "img-fluid mb-1 mt-1") %>
+        <span>
+          <%= current_user.name %>
+        </span>
+        <span>
+          <%= current_user.id %>
+        </span>
+      </div>
+    </div>
+
+    <% if current_user.allfriends.any?  %>
+      <% current_user.allfriends.each do |friendship| %>
+      <div class="friend-info">
+        <div class="choix">01</div>
+        <div class="bubble-leaderboard-yellow d-flex justify-content-around align-items-center">
+          <%= image_tag("salad-user.png", width: 15, height: 15, :class => "img-fluid mb-1 mt-1") %>
+          <span>
+            <%= friendship.friend.name == current_user.name ? friendship.user.name : friendship.friend.name %>
+          </span>
+          <span>
+            <%= friendship.user.id%>
+          </span>
+        </div>
+      </div>
+    <% end  %>
+    <% end  %>
+  </div>
+
+  <div class="w-75 mb-5">
+    <%= simple_form_for @friendship, url: friendships_path, method: :post, html: { class: 'form-inline' } do |f| %>
+      <%# <%= hidden_field_tag "friendship[user_id]", current_user.id %>
+      <%= f.input :friend_id, collection: @all_users, input_html: {multiple: true, data: {controller: 'select2', select2_options_value: {tags: true}}} %>
+      <%= f.submit "Ajouter un ami", class: "btn d-block btn-primary btn-lg w-100 mode-de-jeu" %>
+
+    <% end %>
+  </div>
+
+  <div class="bubble-friend-request w-75">
+    <h6>Demande d'amis</h6>
+    <% @pending.each do |demand|%>
+    <div class="bubble-leaderboard-yellow d-flex justify-content-around align-items-center">
+      <%= image_tag("salad-user.png", width: 15, height: 15, :class => "img-fluid mb-1 mt-1") %>
+      <span>
+        <%= demand.user.name  %>
+      </span>
+      <span class="d-flex ">
+        <%= link_to "✔️", accept_friendship_path(demand), :method => 'patch', class: "btn" %>
+        <%= link_to "❌", cancel_friendship_path(demand), :method => 'patch', class: "btn" %>
+      </span>
+    </div>
+    <% end  %>
+  </div>
 
 </div>
