--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -97,7 +97,7 @@
     background-color: $beige;
     color: rgb(0, 0, 0);
     padding: 10px;
-    max-height: 90vh;
+    height: fit-content;
     border-radius: 20px;
     min-width: 30%;
     max-width: 100%;
