--- a/app/views/friendships/index.html.erb
+++ b/app/views/friendships/index.html.erb
@@ -1,10 +1,10 @@
 <div class="container-friendship">
 
   <div class="bubble-user-recap w-75 mb-5">
-    <h1>ULTRA GENERIQUE</h1>
+    <h4 class="mode-de-jeu">MES (COM)POTES</h4>
   </div>
 
-  <h2>leaderbord</h2>
+  <h2>Classement</h2>
 
   <div class="leaderboard mb-5 mt-2">
     <div class="user-info">
