--- a/app/assets/stylesheets/pages/_signup.scss
+++ b/app/assets/stylesheets/pages/_signup.scss
@@ -4,6 +4,12 @@
   justify-content: space-around;
 }
 
+// .form-radius-guess{
+//   justify-content: space-around;
+//   width: auto;
+//   border-radius: 0px;
+// }
+
 
 
 .alert{
