--- a/app/views/pages/rules.html.erb
+++ b/app/views/pages/rules.html.erb
@@ -1,4 +1,4 @@
-
+<div class="no-scroll">
 <h1 class="animate__animated animate__bounceInDown">Règles Du Jeu</h1>
 
 <div class="regles">
@@ -32,14 +32,17 @@
 
 
 
-  <div class="bubble animate__animated animate__bounceInRight">
+  <div class=" dl-flex flex-column justify-content-around bubble animate__animated animate__bounceInRight">
     <p> Tu veux jouer avec tes amis ?
     <br>
         compares tes scores en t'enregistrant
     <br>
     </p>
+    <div>
       <%= link_to new_user_session_path, class: "anmbtn custom shadow edge" do %>
         <i class="front fas fa-users"></i>
       <% end %>
+    </div>
   </div>
+</div>
 </div>
