--- a/app/views/friendships/index.html.erb
+++ b/app/views/friendships/index.html.erb
@@ -41,8 +41,8 @@
   <div class="w-75 mb-5">
     <%= simple_form_for @friendship, url: friendships_path, method: :post, html: { class: 'form-inline' } do |f| %>
       <%# <%= hidden_field_tag "friendship[user_id]", current_user.id %>
-      <%= f.input :friend_id, collection: @all_users, input_html: {multiple: true, data: {controller: 'select2', select2_options_value: {tags: true}}} %>
-      <%= f.submit "Ajouter un ami", class: "btn d-block btn-primary btn-lg w-100 mode-de-jeu" %>
+      <%= f.input :friend_id, label: 'Trouver un(e) ami(e)', collection: @all_users, input_html: {multiple: true, data: {controller: 'select2', select2_options_value: {tags: true}}} %>
+      <%= f.submit "Ajouter un(e) ami(e)", class: "btn d-block btn-primary btn-lg w-100 mode-de-jeu" %>
 
     <% end %>
   </div>
