carousel fix on victory screen

--- a/app/views/guests/stats.html.erb
+++ b/app/views/guests/stats.html.erb
@@ -6,7 +6,7 @@
   <div id="carouselExampleInterval" class="carousel slide w-75 animate__animated animate__rubberBand" data-bs-ride="carousel">
     <div class="carousel-inner">
       <%# Slide %>
-      <div class="carousel-item active text-center bubble-stat-green" data-bs-interval="20000">
+      <div class="carousel-item text-center active bubble-stat-green" data-bs-interval="20000">
         <div class="w-100">
           <div class="mt-4 choix stat-category">PARTIES</div>
           <div class=" stat-number mt-5 choix"> <%= @sessionscount %> </div>
@@ -26,8 +26,8 @@
           <div class=" stat-number mt-5 choix"><%= @averageguesses %></div>
         </div>
       </div>
-      <%# Slide %>
     </div>
+      <%# Slide %>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
