Bug du leaderboard fixé

--- a/app/views/friendships/index.html.erb
+++ b/app/views/friendships/index.html.erb
@@ -23,7 +23,7 @@
                 <%= friend[0] %>
               </span>
               <span>
-                <%= friend[1] %>
+                <%= friend[1] == 999 ? "-" : friend[1] %>
               </span>
             </div>
           </div>
@@ -40,7 +40,7 @@
             <%= friend[0] %>
           </span>
           <span>
-            <%= friend[1] %>
+            <%= friend[1] == 999 ? "-" : friend[1] %>
           </span>
         </div>
       </div>
