--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -24,7 +24,7 @@
     <br>
     Car surprise nous venons tous de milieu différent,
     <br>
-    mais avons un objectif commun vous divertir)
+    mais avons un objectif commun: vous divertir)
     <br>
     <br>
     A votre service pour vous amuser et vous rappeler
@@ -34,7 +34,6 @@
     Voici la <'ul'>TEAM !
   </p>
 </div>
-
 
 <div class="bubble animate__animated animate__bounceInLeft">
   <p class= "title"><strong>Je peux voir la chanson d’hier ?</strong></p>
