--- a/app/assets/stylesheets/pages/_faq.scss
+++ b/app/assets/stylesheets/pages/_faq.scss
@@ -1,7 +1,7 @@
-
 .pagequestion{
 justify-content: flex-start;
 z-index: -1;
+overflow-x: hidden;
 
 }
 
@@ -11,7 +11,6 @@ z-index: -1;
   padding: 4%;
   margin-bottom: 4%;
   border-radius: 15px;
-
 }
 
 h1 {
@@ -29,5 +28,4 @@ h1 {
   .title {
     text-align:left;
   }
-
   }
