--- a/app/views/guesses/_form.html.erb
+++ b/app/views/guesses/_form.html.erb
@@ -7,7 +7,7 @@
 <% else %>
   <div class="flex-grow-1">
     <%= simple_form_for([game, game_session, game_session_song, guess ], html: { class: 'd-flex flex-grow-1'}, data: { submit_guess_target: "form", action: "submit->submit-guess#send" }) do |f| %>
-      <%= f.input_field :word, label: false, as: :string, class: " form-play form-control", data: {submit_guess_target: "input"}, autofocus: true, autocomplete: "off" %>
+      <%= f.input_field :word, label: false, as: :string, class: " form-play form-control", data: {submit_guess_target: "input"}, autocomplete: "off" %>
       <%= f.button :submit, class: 'btn btn-primary btn-validate-prop', value: "Valider"  %>
     <% end %>
   </div>
