--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,7 +16,7 @@
     <%= f.button :submit, value: "CHANSON DU JOUR", class: 'btn d-block btn-primary btn-lg mb-4', style: "width: 100%"  %>
   <% end %>
   <%= simple_form_for([@playlist, @session], html: { class: 'd-block', data: {action: "submit->home#out"} }) do |f| %>
-    <%= f.button :submit, value: "PLAYLIST DU JOUR (x3)", class: 'btn d-block btn-primary btn-lg mb-4', style: "width: 100%"  %>
+    <%= f.button :submit, value: "PLAYLIST DU JOUR (x#{@playlist.game_songs.count})", class: 'btn d-block btn-primary btn-lg mb-4', style: "width: 100%"  %>
   <% end %>
 </div>
 
