--- a/app/views/errors/not_found.html.erb
+++ b/app/views/errors/not_found.html.erb
@@ -1,2 +1,11 @@
-<h1>Errors#not_found</h1>
-<p>Find me in app/views/errors/not_found.html.erb</p>
+<div class="container-victory" >
+  <h1>Aidez-moi je suis perdue !</h1>
+
+  <div class="container text-center logo animate__animated animate__bounceInDown" >
+    <%= image_tag("404.png", width: 400, height: 400, :class => "img-fluid mb-1") %>
+  </div>
+
+  <div>
+    <%= link_to "Rentrer chez moi !", root_path, class: 'btn d-block btn-primary btn-lg mb-4', style: "width: 100%" %>
+  </div>
+</div>
