--- a/app/views/users/stats.html.erb
+++ b/app/views/users/stats.html.erb
@@ -44,7 +44,7 @@
 
   <%# Logo %>
   <div class="container text-center logo animate__animated animate__bounceInUp mt-4" >
-    <%= image_tag("logo-smile.png", width: 270, height: 270, :class => "img-fluid mb-1") %>
+    <%= image_tag("stats.png", width: 270, height: 270, :class => "img-fluid mb-1") %>
   </div>
 
 </div>
