leaderboard css modif

--- a/app/assets/stylesheets/pages/_friendship.scss
+++ b/app/assets/stylesheets/pages/_friendship.scss
@@ -6,6 +6,7 @@
   align-items: center;
   text-align: center;
   width: 100vw;
+  overflow-x: hidden;
 }
 
 
@@ -40,4 +41,3 @@
   text-align: center;
   align-items: center;
 }
-
